Add support for Java 21 and Java 25